Fixed collapsed menu position.

--- a/docs/styles/carousel.css
+++ b/docs/styles/carousel.css
@@ -1,7 +1,7 @@
 .carousel {
     position: absolute;
     left: 0;
-    top: 3.5em;
+    top: 4em;
     width: 100%;
     display: flex;
     flex-direction: column;
